@@ -112,6 +112,9 @@ BUGFIXES:
   ZOOKEEPER-567. javadoc for getchildren2 needs to mention "new in 3.3.0"
   (phunt via breed)
 
+  ZOOKEEPER-547. Sanity check in QuorumCnxn Manager and quorum communication port.
+  (mahadev via breed)
+
 IMPROVEMENTS:
   ZOOKEEPER-473. cleanup junit tests to eliminate false positives due to
   "socket reuse" and failure to close client (phunt via mahadev)
